--- a/_layouts/resume.html
+++ b/_layouts/resume.html
@@ -12,7 +12,7 @@
       <header class="page-header">
 
         <!-- You can turn off the avatar in _config.yml by setting to false -->
-        {% if site.resume_avatar == 'true' %}
+        {% if site.resume_avatar == 'false' %}
         <img src="images/avatar.jpg" alt="my photo" class="avatar no-print" itemprop="image">
         {% endif %}
 
